--- a/ceilometer/map.jinja
+++ b/ceilometer/map.jinja
@@ -1,22 +1,30 @@
 
 {% set server = salt['grains.filter_by']({
     'Debian': {
-        'pkgs': ['ceilometer-alarm-evaluator', 'ceilometer-api', 'ceilometer-agent-central', 'ceilometer-collector', 'python-ceilometerclient','ceilometer-agent-notification','ceilometer-alarm-notifier'],
-        'services': ['ceilometer-collector', 'ceilometer-api','ceilometer-agent-central','ceilometer-agent-notification','ceilometer-alarm-evaluator','ceilometer-alarm-notifier'],
+        'basic_pkgs': ['ceilometer-api', 'ceilometer-agent-central',  'python-ceilometerclient','ceilometer-agent-notification'],
+        'alarm_pkgs': ['ceilometer-alarm-evaluator', 'ceilometer-alarm-notifier'],
+        'collector_pkgs': ['ceilometer-collector'],
+        'alarm_services': ['ceilometer-alarm-evaluator','ceilometer-alarm-notifier'],
+        'collector_services': ['ceilometer-collector'],
+        'basic_services': ['ceilometer-api','ceilometer-agent-central','ceilometer-agent-notification'],
     },
     'RedHat': {
-        'pkgs': ['openstack-ceilometer-alarm', 'openstack-ceilometer-api', 'openstack-ceilometer-central', 'openstack-ceilometer-collector', 'python-ceilometerclient'],
-        'services': ['openstack-ceilometer-collector', 'openstack-ceilometer-api'],
+        'basic_pkgs':[ 'openstack-ceilometer-api', 'openstack-ceilometer-central', 'python-ceilometerclient'],
+        'alarm_pkgs':['openstack-ceilometer-alarm'],
+        'collector_pkgs':['openstack-ceilometer-collector',],
+        'basic_services':['openstack-ceilometer-api'],
+        'collector_services':['openstack-ceilometer-collector'],
+        'alarm_services': ['openstack-ceilometer-alarm-evaluator']
     },
 }, merge=salt['pillar.get']('ceilometer:server')) %}
 
 {% set agent = salt['grains.filter_by']({
     'Debian': {
-        'pkgs': ['ceilometer-agent-compute'],
-        'services': ['ceilometer-agent-compute'],
+        'basic_pkgs': ['ceilometer-agent-compute'],
+        'basic_services': ['ceilometer-agent-compute'],
     },
     'RedHat': {
-        'pkgs': ['openstack-ceilometer-compute'],
-        'services': ['openstack-ceilometer-compute'],
+        'basic_pkgs': ['openstack-ceilometer-compute'],
+        'basic_services': ['openstack-ceilometer-compute'],
     },
 }, merge=salt['pillar.get']('ceilometer:agent')) %}
